# ToothPaste

./: .editorconfig  .gitignore  .prettierignore  .prettierrc  CMakeLists.txt  DUCKYSCRIPT_README.md  README.MD  README.md  index.html  package-lock.json  package.json  platformio.ini  sdkconfig  sdkconfig.old  tailwind.config.js  vite.config.js
.github/workflows/: deploy.yml
boards/: esp32-s3-devkitc-1-n16r8v.json
components/IDF_USB/: CMakeLists.txt  IDFHID.cpp  IDFHID.h  IDFHIDKeyboard.cpp  IDFHIDKeyboard.h  IDFHIDMouse.cpp  IDFHIDMouse.h  IDFHIDSystemControl.cpp  IDFHIDSystemControl.h
components/IDF_USB/keyboardLayout/: KeyboardLayout_en_US.cpp
components/SecureSession/: CMakeLists.txt  SecureSession.cpp  SecureSession.h
components/ble/: CMakeLists.txt  ble.cpp  ble.h
components/espHID/: CMakeLists.txt  espHID.cpp  espHID.h  tudconfig.c  tudconfig.cpp
components/hwUI/: CMakeLists.txt
components/rgbRMT/: CMakeLists.txt  NeoPixelRMT.h
components/serialDebug/: SerialDebug.h
components/stateManager/: CMakeLists.txt
components/toothPacket/: CMakeLists.txt  toothpacket.pb.c  toothpacket.pb.h
firmware/: README.MD  sdkconfig  sdkconfig.old
include/: SerialDebug.h
lib/SecureSession/: SecureSession.cpp  SecureSession.h
lib/ble/: ble.cpp  ble.h
lib/espHID/: espHID.cpp  (+1 more)
main/: CMakeLists.txt  idf_component.yml  main.cpp
public/: ToothPaste_GLB.glb  index.html
shared/: toothpacket.options  toothpacket.proto
src/: App.jsx  hid.cpp  hid.h  main.cpp  main.h  main.jsx  rgb.cpp  rgb.h  security.cpp  security.h
web/: .gitignore  package-lock.json
(+95 files in other folders)
